# tracking-houston-s-green-cover-with-satellite-ndvi-using-remote-sensing-and-python

./: .gitignore  2025-04-29 Priority Areas for Electrification in Houston.py  Houston NDVI gif maker.ipynb  Houston NDVI gif maker.py  README.md  article.md  config.yaml  pyproject.toml
legacy/: 2025-04-29 Priority Areas for Electrification in Houston.ipynb  2025-04-29 Priority Areas for Electrification in Houston.py  Houston NDVI gif maker.ipynb  Houston NDVI gif maker.py  README.md
src/houston_ndvi/: __init__.py  agreement.py  config.py  electrification.py  gif.py  intervals.py  io_disk.py  ndvi.py  openeo_fetch.py  paths.py  plotting.py  runner.py  timeseries.py
tests/: test_config.py  test_intervals.py  test_ndvi.py  test_paths.py  test_timeseries.py
