[project]
name = "tracking-houston-s-green-cover-with-satellite-ndvi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "censusdata>=1.15.post1",
    "contextily>=1.7.0",
    "esda>=2.9.0",
    "geopandas>=1.1.3",
    "imageio>=2.37.3",
    "libpysal>=4.14.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openeo>=0.49.0",
    "pandas>=2.3.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "xarray>=2025.1.1",
]
