[project]
name = "houston-ndvi"
version = "0.2.0"
description = "Track Houston green cover with Sentinel-2 NDVI via Copernicus openEO"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "censusdata>=1.15.post1",
    "contextily>=1.7.0",
    "esda>=2.9.0",
    "geopandas>=1.1.3",
    "imageio>=2.37.3",
    "libpysal>=4.14.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openeo>=0.49.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "xarray>=2025.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.8",
]

[project.scripts]
houston-ndvi = "houston_ndvi.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/houston_ndvi"]

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "config.yaml"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
